--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -31,7 +31,7 @@
     <meta property="og:description" content="Online portfolio of artist José Ruiz de la Torre">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="PORTFOLIO.html" data-home-page-title="PORTFOLIO" class="u-body u-overlap u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-sticky u-sticky-082e" id="sec-453f"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-sticky u-sticky-082e" id="sec-453f"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="PORTFOLIO.html" data-page-id="251534932" class="u-image u-logo u-image-1" data-image-width="1192" data-image-height="1575" title="Home">
           <img src="images/logojosevectorial.svg" class="u-logo-image u-logo-image-1">
         </a>
