--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="es"><head>
+<html style="font-size: 16px;" lang="es-ES"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="The Gemstone">
@@ -18,27 +18,28 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
-		"logo": "images/logojos.png"
+		"name": "José Ruiz - Portfolio",
+		"logo": "images/logojosevectorial.svg"
 }</script>
     <meta name="theme-color" content="#135dee">
     <meta property="og:title" content="PROJECTS">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-overlap u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-sticky u-sticky-082e" id="sec-453f"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="HOME.html" data-page-id="251534932" class="u-image u-logo u-image-1" data-image-width="4971" data-image-height="6565" title="Home">
-          <img src="images/logojos.png" class="u-logo-image u-logo-image-1">
+        <a href="PORTFOLIO.html" data-page-id="251534932" class="u-image u-logo u-image-1" data-image-width="1192" data-image-height="1575" title="Home">
+          <img src="images/logojosevectorial.svg" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
-          <div class="menu-collapse u-custom-font" style="font-size: 1.125rem; letter-spacing: 1px; font-family: Westfalia-Regular;">
-            <a class="u-button-style u-custom-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-text-white" href="#" style="">
+        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-position="">
+          <div class="menu-collapse u-custom-font" style="font-size: 1.5rem; letter-spacing: 1px; font-weight: 500; font-family: LunchBox;">
+            <a class="u-button-style u-custom-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-text-white" href="#" style="">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-1 u-text-hover-grey-10 u-text-white" href="HOME.html" style="padding: 10px 20px;">HOME</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-1 u-text-hover-grey-10 u-text-white" href="PORTFOLIO.html" style="padding: 10px 20px;">PORTFOLIO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-1 u-text-hover-grey-10 u-text-white" href="PROJECTS.html" style="padding: 10px 20px;">PROJECTS</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-1 u-text-hover-grey-10 u-text-white" href="CONTACT.html" style="padding: 10px 20px;">CONTACT</a>
 </li></ul>
@@ -47,7 +48,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HOME.html">HOME</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="PORTFOLIO.html">PORTFOLIO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="PROJECTS.html">PROJECTS</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="CONTACT.html">CONTACT</a>
 </li></ul>
@@ -173,16 +174,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-1c70"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   
 </body></html>
